# mdaf3

./: .codecov.yml  .gitattributes  .gitignore  .pylintrc  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
mdaf3/: AF3OutputParser.py  BoltzOutputParser.py  FeatureExtraction.py  __init__.py
mdaf3/data/: files.py
mdaf3/data/1d3df2ab5ff6b4050b4a4abae1553a6d/: 1d3df2ab5ff6b4050b4a4abae1553a6d_model_0.cif  1d3df2ab5ff6b4050b4a4abae1553a6d_model_1.cif  confidence_1d3df2ab5ff6b4050b4a4abae1553a6d_model_0.json  confidence_1d3df2ab5ff6b4050b4a4abae1553a6d_model_1.json  pae_1d3df2ab5ff6b4050b4a4abae1553a6d_model_0.npz  pae_1d3df2ab5ff6b4050b4a4abae1553a6d_model_1.npz  pde_1d3df2ab5ff6b4050b4a4abae1553a6d_model_0.npz  pde_1d3df2ab5ff6b4050b4a4abae1553a6d_model_1.npz  plddt_1d3df2ab5ff6b4050b4a4abae1553a6d_model_0.npz  plddt_1d3df2ab5ff6b4050b4a4abae1553a6d_model_1.npz
mdaf3/data/93f0240a1d2c15da9551841d22239d41/: ranking_scores.csv
mdaf3/data/93f0240a1d2c15da9551841d22239d41/seed-1_sample-0/: confidences.json  model.cif  summary_confidences.json
mdaf3/data/93f0240a1d2c15da9551841d22239d41/seed-2_sample-0/: confidences.json  model.cif  summary_confidences.json
mdaf3/tests/: conftest.py  test_mdaf3.py
tmp/: all_proteins_PepSeq.csv  mhc_active_site.ipynb
